# fugue

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.opencode/plans/: 007_STAGE_7_DASHBOARD.md  008_STAGE_8_AI_CODEGEN.md  009_STAGE_9_ASYNC_BUILD.md  010_STAGE_10_PRODUCTION.md
crates/fugue/: Cargo.toml
crates/fugue-builder/: Cargo.toml
crates/fugue-builder/src/: artifacts.rs  main.rs  runner.rs
crates/fugue-common/: Cargo.toml
crates/fugue-common/src/: builder.rs  error.rs  fs.rs  lib.rs  models.rs  package.rs  project_config.rs
crates/fugue-common/src/config/: defaults.rs  mod.rs
crates/fugue/migrations/: 001_initial.sql
crates/fugue/src/: cli.rs  error.rs  lib.rs  main.rs  validation.rs
crates/fugue/src/api/: apps.rs  deploy.rs  mod.rs  platform.rs  runtime.rs  source.rs  templates.rs  workspaces.rs
crates/fugue/src/client/: api.rs  mod.rs
crates/fugue/src/commands/: mod.rs
crates/fugue/src/config/: mod.rs
crates/fugue/src/db/: crud.rs  mod.rs  models.rs
crates/fugue/src/nuxtjs/: builder.rs  detection.rs  mod.rs
crates/fugue/src/process/: config_gen.rs  health.rs  lifecycle.rs  mod.rs
crates/fugue/src/reactrouter/: builder.rs  detection.rs
crates/fugue/src/runtime/: mod.rs  workerd.rs
crates/fugue/src/templates/: mod.rs
crates/fugue/src/vite/: detection.rs
crates/fugue/src/worker/: builder.rs  detection.rs
dashboard/: .gitignore  package-lock.json  package.json  test-screenshots  tsconfig.cloudflare.json  tsconfig.node.json  vitest.config.ts  wrangler.jsonc
dashboard/app/: app.css  root.tsx  routes.ts
dashboard/app/components/: ai-generate-panel.tsx  app-card.tsx  build-log.tsx  code-editor.tsx  deploy-button.tsx  deployment-card.tsx  editor-panel.test.tsx  editor-panel.tsx  file-tree.tsx  preview-frame.tsx  status-badge.tsx
dashboard/app/hooks/: use-workspace-files.test.tsx  use-workspace-files.ts
dashboard/app/lib/: api.ts  file-state.test.ts  file-state.ts  icons.ts  theme.ts  types.ts  ws.ts
dashboard/app/routes/: $.tsx  _layout.tsx  apps.tsx  apps_.$id.deploy.tsx  apps_.$id.tsx  deployments.tsx  deployments_.$id.deploy.tsx  deployments_.$id.tsx  home.tsx  workspace.tsx  workspace_.$id.tsx
dashboard/app/test/: setup.tsx
dashboard/workers/: app.ts
docs/: 000_ROADMAP.md  001_STAGE_1.md  002_STAGE_2_COMPLETE.md  003_STAGE_3_COMPLETE.md  004_STAGE_4_WORKERD_NUXT.md  005_STAGE_5_WORKERD_REACT_ROUTER.md  006_TODO_STAGE_6_PLATFORM_API.md  007_TODO_STAGE_7_ASYNC_BUILD.md  008_TODO_STAGE_8_AI_CODEGEN.md  009_TODO_STAGE_9_DASHBOARD.md
examples/: hello.js
examples/hono-app/: .gitignore  fugue.toml  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
examples/nextjs-app/: README.md  package-lock.json  package.json  pnpm-lock.yaml
examples/nextjs-app/app/: layout.tsx  page.tsx
examples/nextjs-simple/: README.md  package-lock.json  package.json  pnpm-lock.yaml
examples/nuxtjs-app/: README.md  embed-assets.mjs  fugue.toml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  worker-configuration.d.ts  workerd.capnp  wrangler.jsonc
examples/nuxtjs-simple/: .gitignore  README.md  app.vue  build-workerd.sh  entry.mjs  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  run-workerd.sh  wrangler.jsonc
examples/react-router-simple/: fugue.toml  package-lock.json  package.json  wrangler.jsonc
examples/vite-react/: fugue.toml  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
examples/vite-vue/: README.md  fugue.toml  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
examples/worker/: fugue.toml  wrangler.jsonc
examples/worker/src/: index.ts
migrations/: 002_workspaces.sql  003_add_vite_framework.sql  004_add_hono_framework.sql
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  validation.rs
src/ai/: client.rs  mod.rs  parser.rs  prompts.rs
src/api/: ai.rs  apps.rs  deploy.rs  mod.rs  platform.rs  runtime.rs  source.rs  workspaces.rs
src/client/: api.rs
src/commands/: mod.rs
src/config/: defaults.rs  mod.rs
src/daemon/: mod.rs  process.rs  server.rs  state.rs
src/db/: crud.rs  mod.rs  models.rs
src/nextjs/: builder.rs  detection.rs  mod.rs
src/nuxtjs/: builder.rs  detection.rs  mod.rs
src/process/: config_gen.rs  lifecycle.rs
src/reactrouter/: builder.rs  detection.rs  mod.rs
src/registry/: metadata.rs  mod.rs  storage.rs
src/runtime/: mod.rs  workerd.rs
src/templates/: mod.rs
src/worker/: builder.rs  detection.rs  mod.rs
tests/: api_integration.rs
(+19 files in other folders)
