[package]
name = "fugue"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
reqwest = { version = "0.12", features = ["json"] }
daemonize = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6.0.0"
thiserror = "2.0.18"
walkdir = "2"
fs_extra = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
