[package]
name = "fugue"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fugue"
path = "src/main.rs"

[dependencies]
fugue-common = { path = "../fugue-common" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
axum = { version = "0.7", features = ["multipart", "ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6.0.0"
thiserror = { workspace = true }
walkdir = "2"
fs_extra = "1.3"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
toml = "0.8"
filetime = "0.2"
zip = "2"
once_cell = "1"
async-nats = { workspace = true }
futures-util = "0.3"
nix = { version = "0.29", features = ["signal"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
